# boise-pwis

./: .gitignore  README.md  build_exec_dashboard.py  generate_dashboard.py  pyproject.toml  requirements.txt  strategy.md
.github/workflows/: ci.yml
app/: __init__.py  streamlit_app.py
data/: all_segments.csv  bridge_inspections.csv  budget_actuals.csv  budget_cip.csv  cip_projects.csv  complaints.csv  facilities.csv  flow_monitoring.csv  generate_data.py  geothermal_segments.csv  monitoring_data.csv  pi_segments.csv  pipe_segments.csv  road_segments.csv  service_requests.csv  sewer_segments.csv  traffic_counts.csv  weather_events.csv  work_orders.csv
docs/: bi_maturity.md  data_model.md  index.html  knowledge_base.md  map_complaints.html  map_condition.html  map_executive.html  map_priority.html  map_service_requests.html  model_logic.md  problem_definition.md
gis/: __init__.py  map.py
models/: __init__.py  prioritization.py  scenario_engine.py
notebooks/: 01_pwis_analysis.ipynb  build_notebook.py
tests/: __init__.py  test_data_quality.py  test_prioritization.py  test_scenario_engine.py
