[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "boise-pwis"
version = "1.0.0"
description = "Boise Public Works Intelligence System — infrastructure investment prioritization platform"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Director of Analytics & Strategy", email = "analytics@cityofboise.gov" },
]
keywords = ["public works", "infrastructure", "analytics", "GIS", "prioritization", "government"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Other Audience",
    "Topic :: Scientific/Engineering :: GIS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pandas>=2.0.0,<3.0",
    "numpy>=1.24.0,<2.0",
    "folium>=0.15.0",
    "plotly>=5.18.0",
]

[project.optional-dependencies]
dashboard = [
    "streamlit>=1.32.0",
    "streamlit-folium>=0.18.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "ipykernel>=6.25.0",
    "jupyter>=1.0.0",
]
quality = [
    "great-expectations>=0.18.0",
]

[project.urls]
Repository = "https://github.com/[your-org]/boise-pwis"
Documentation = "https://github.com/[your-org]/boise-pwis/blob/main/README.md"

[project.scripts]
pwis-score   = "models.prioritization:main"
pwis-scenario = "models.scenario_engine:main"
pwis-maps    = "gis.map:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["models*", "gis*", "app*"]

# ─── pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths      = ["tests"]
addopts        = "-v --tb=short --cov=models --cov-report=term-missing"
filterwarnings = ["ignore::FutureWarning", "ignore::DeprecationWarning"]

# ─── Coverage ─────────────────────────────────────────────────────────────────
[tool.coverage.run]
source  = ["models"]
omit    = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
fail_under = 70
show_missing = true

# ─── Ruff (linting) ───────────────────────────────────────────────────────────
[tool.ruff]
line-length    = 100
target-version = "py310"
select         = ["E", "F", "W", "I", "UP", "B"]
ignore         = ["E501", "B007"]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]   # Allow assert in tests

# ─── Black (formatting) ───────────────────────────────────────────────────────
[tool.black]
line-length    = 100
target-version = ["py310", "py311", "py312"]
